# cpp-platform-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  USAGE.md
apps/template/: CMakeLists.txt  main.cpp
cmake/: arch.cmake  common.cmake  feature_detection.cmake
cmake/helpers/: show_invocations.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  android-ndk.cmake
examples/: CMakeLists.txt  loader.cpp  loader.h  loader_posix.cpp  loader_win.cpp  main.cpp  platform_factory.h
lib/: CMakeLists.txt  platform.cpp  platform.h
scripts/: show_build_commands.sh
tests/: CMakeLists.txt
